Corrected iOS jumbotron background image (did not work as paralux/fixed position on iOS devices.) Also correctet mobile layout of find a class table on smaller mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,8 +269,8 @@ footer {
     }
 
     .table-container {
-        margin-left: 1%;
-        margin-right: 1%;
+        margin-left: 2px;
+        margin-right: 2px;
         -webkit-box-align: center;
             -ms-flex-align: center;
                 align-items: center;
@@ -288,5 +288,39 @@ footer {
 
     .location-text {
         margin: 10px 5px 30px 5px;
+    }
+}
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
+
+    .jumbotron-container {
+        height: 80vh;
+        background: url('../images/mobile-13.jpg') no-repeat;
+        background-size: cover;
+        background-position: bottom;
+        width: 100%;
+        padding-top: 75px;
+        padding-right: 5%;
+        padding-left: 5%;
+    }
+}
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+      .jumbotron-container {
+        height: 80vh;
+        background: url('../images/mobile-13.jpg') no-repeat;
+        background-size: cover;
+        background-position: bottom;
+        width: 100%;
+        padding-top: 75px;
+        padding-right: 5%;
+        padding-left: 5%;
     }
 }
